--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,18 @@
             "email": "rhylton.figueiredo@gmail.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {},
     "autoload": {
         "psr-4": {
             "rhyltonn\\formulario-contato\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Rhyltonn\\FormularioContato\\FormularioContatoServiceProvider"
+            ]
         }
     }
 }
